@@ -14,6 +14,7 @@
 * Authorize.Net: Fix amount formatting [ntalbott]
 * Authorize.Net: Truncate order_id to 20 characters [ntalbott]
 * Authorize.Net: Truncate more fields [duff]
+* Authorize.Net: Truncate invoiceNumber [ntalbott]
 
 == Version 1.44.1 (Aug 28, 2014)
 
